--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0",
         "realrashid/sweet-alert": "^3.1",
-        "stichoza/google-translate-php": "^4.1"
+        "stichoza/google-translate-php": "^4.1",
+        "yajra/laravel-datatables-oracle": "^9.14"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
